--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
  
   <div id="services">
       <div class="box" style="padding-top:50px">
-        <img src="/New folder/burger.jpeg" style="height: 290px;">  
+        <img src="New folder/burger.jpeg" style="height: 290px;">  
       </div>
 
       <div  style="padding-top:50px;font-family: 'Baloo 2', cursive;" >
@@ -101,7 +101,7 @@
  
   <div id="services">
       <div class="box" style="padding-top:50px">
-        <img src="/New folder/burger.jpeg" style="height: 290px;">  
+        <img src="New folder/burger.jpeg" style="height: 290px;">  
       </div>
 
       <div  style="padding-top:50px;font-family: 'Baloo 2', cursive;" >
